main_ecosystem_trading/APPS/dashboard/logic-canvas-main/src-tauri/tests/snapshots/semantic_tests__double_multiplier.snap
---
source: tests/semantic_tests.rs
assertion_line: 56
expression: result
---
{
  "input": "double the multiplier for power",
  "parsed": {
    "command_type": "semantic",
    "target": {
      "logics": [
        "POWER"
      ]
    },
    "params": {},
    "semantic": {
      "description": "Double multiplier",
      "operations": [
        {
          "field": "multiplier",
          "op": "scale",
          "factor": 2.0
        }
      ]
    }
  },
  "result": {
    "success": true,
    "message": "[SEMANTIC PREVIEW] Double multiplier",
    "preview": {
      "description": "Double multiplier",
      "operations": [
        {
          "factor": 2.0,
          "field": "multiplier",
          "op": "scale"
        }
      ],
      "target": {
        "logics": [
          "POWER"
        ]
      }
    }
  },
  "status": "pass"
}
