main_ecosystem_trading/APPS/dashboard/logic-canvas-main/src-tauri/tests/snapshots/semantic_tests__set_grid_600.snap
---
source: tests/semantic_tests.rs
assertion_line: 150
expression: result
---
{
  "input": "set grid to 600 for group 1",
  "parsed": {
    "command_type": "set",
    "target": {
      "groups": [
        1
      ],
      "field": "grid"
    },
    "params": {
      "value": 600.0
    }
  },
  "result": {
    "success": true,
    "message": "Set Some(\"grid\") = Some(Number(600.0))"
  },
  "status": "pass"
}
