main_ecosystem_trading/APPS/dashboard/logic-canvas-main/src-tauri/tests/snapshots/semantic_tests__set_multiplier.snap
---
source: tests/semantic_tests.rs
assertion_line: 162
expression: result
---
{
  "input": "set multiplier to 1.5 for power",
  "parsed": {
    "command_type": "set",
    "target": {
      "logics": [
        "POWER"
      ]
    },
    "params": {
      "value": 1.5
    }
  },
  "result": {
    "success": false,
    "message": "Missing field or value"
  },
  "status": "fail"
}
