main_ecosystem_trading/APPS/dashboard/logic-canvas-main/src-tauri/tests/snapshots/semantic_tests__show_grid_all_groups.snap
---
source: tests/semantic_tests.rs
assertion_line: 134
expression: result
---
{
  "input": "show grid for all groups",
  "parsed": {
    "command_type": "query",
    "target": {
      "field": "grid"
    },
    "params": {}
  },
  "result": {
    "success": true,
    "message": "Query for field: Some(\"grid\")"
  },
  "status": "pass"
}
