main_ecosystem_trading/APPS/dashboard/logic-canvas-main/src-tauri/tests/snapshots/semantic_tests__tighten_grid_by_200.snap
---
source: tests/semantic_tests.rs
assertion_line: 118
expression: result
---
{
  "input": "tighten grid by 200",
  "parsed": {
    "command_type": "semantic",
    "target": {
      "field": "grid"
    },
    "params": {},
    "semantic": {
      "description": "Reduce grid by 200 pips",
      "operations": [
        {
          "field": "grid",
          "op": "subtract",
          "value": 200.0
        }
      ]
    }
  },
  "result": {
    "success": true,
    "message": "[SEMANTIC PREVIEW] Reduce grid by 200 pips",
    "preview": {
      "description": "Reduce grid by 200 pips",
      "operations": [
        {
          "field": "grid",
          "op": "subtract",
          "value": 200.0
        }
      ],
      "target": {
        "field": "grid"
      }
    }
  },
  "status": "pass"
}
